background and new style

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <body>
     <header class="page-header">
-    	<div class="container">
-      Контакты в шапке, как и кот
-  		</div>
-    </header>
+  <div class="container">
+    <a href="mailto:rock59538@gmail.com" class="header-email">rock59538@gmail.com</a>
+    <a href="tel:+380958660911" class="header-phone">+380 95 866 09 11</a>
+  </div>
+</header>
 
     <section class="hero-image">
     	<div class="container">
@@ -24,6 +25,9 @@
     <section class="intro">
     	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+  		<img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+	  </figure>
       <h3>Студент</h3>
       <p>Люблю кушать</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,9 +38,14 @@
     <section class="portfolio">
     	<div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+  		<img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+	  </figure>
 
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -45,7 +54,8 @@
 
     <footer class="page-footer">
     	<div class="container">
-      Контакты в подвале
+      <a href="mailto:rock59538@gmail.com" class="footer-email">rock59538@gmail.com</a>
+    <a href="tel:+380958660911" class="footer-phone">+380 95 866 09 11</a>
       </div>
     </footer>
   </body>
